<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".activity.ActivityProductForm">

        <EditText
            android:id="@+id/activity_products_list_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:hint="name"
            android:inputType="text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/activity_products_list_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="description"
            android:inputType="text"
            app:layout_constraintEnd_toEndOf="@id/activity_products_list_name"
            app:layout_constraintStart_toStartOf="@id/activity_products_list_name"
            app:layout_constraintTop_toBottomOf="@+id/activity_products_list_name" />

        <EditText
            android:id="@+id/activity_products_list_value"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="value"
            android:inputType="numberDecimal"
            app:layout_constraintBottom_toTopOf="@+id/activity_products_list_save_button"
            app:layout_constraintEnd_toEndOf="@id/activity_products_list_description"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@id/activity_products_list_description"
            app:layout_constraintTop_toBottomOf="@+id/activity_products_list_description"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/activity_products_list_save_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="Salve"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintVertical_bias="@integer/material_motion_duration_long_1" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>