<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".ui.activity.LoginActivity">

        <ImageView
            android:id="@+id/activity_login_image_logo"
            android:layout_width="100dp"
            android:layout_height="100dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/activity_login_title"
            app:layout_constraintStart_toStartOf="@+id/activity_login_title"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.15"
            app:srcCompat="@drawable/logo" />

        <TextView
            android:id="@+id/activity_login_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Produtos Naturais"
            android:textSize="40sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/activity_login_image_logo" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputlayout_user"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/activity_login_title">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/activity_login_user"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Usuário"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputlayout_password"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textInputlayout_user">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/activity_login_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Senha"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/activity_login_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="Entrar"
            app:layout_constraintEnd_toEndOf="@id/textInputlayout_password"
            app:layout_constraintStart_toStartOf="@id/textInputlayout_password"
            app:layout_constraintTop_toBottomOf="@id/textInputlayout_password" />


        <Button
            android:id="@+id/activity_login_button_register"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@android:color/transparent"
            android:text="cadastrar usuário"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/activity_login_button"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/activity_login_button"
            app:layout_constraintTop_toBottomOf="@id/activity_login_button"
            app:layout_constraintVertical_bias="0.0" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
