<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context = ".activity.ActivityUserRegistration">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout_user"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/activity_form_user_registration"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Usuário"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputlayout_name"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="@id/textInputLayout_user"
            app:layout_constraintStart_toStartOf="@id/textInputLayout_user"
            app:layout_constraintTop_toBottomOf="@id/textInputLayout_user">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/activity_form_name_registration"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Nome"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputlayout_password"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="@id/textInputlayout_name"
            app:layout_constraintStart_toStartOf="@id/textInputlayout_name"
            app:layout_constraintTop_toBottomOf="@id/textInputlayout_name">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/activity_form_password_registration"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Senha"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/activity_form_registration_button_register"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="Cadastrar"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/textInputlayout_password"
            app:layout_constraintStart_toStartOf="@id/textInputlayout_password"
            app:layout_constraintTop_toBottomOf="@id/textInputlayout_password"
            app:layout_constraintVertical_bias="0.0" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>