<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menu_product_details_edit"
        android:icon="@drawable/ic_action_edit"
        android:title="Editar"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_product_details_remove"
        android:icon="@drawable/ic_action_delete"
        android:title=" Remover"
        app:showAsAction="ifRoom" />


</menu>